--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="/build/app.css"/>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    <div class="bg-primary">
+        <div class="container">
+            <div class="col-12">
+                <div class="text-center m-0 vh-50 d-flex flex-column justify-content-center text-light">
+                    <h1 class="text-light"><span>{{ projectname }}</span></h1>
+                    <p class="lead">{{ subtitle }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-4 mb-4">
         {% block body %}{% endblock %}
+    </div>
         {% block javascripts %}{% endblock %}
+        <script type="text/javascript" src="build/app.js"/>
     </body>
 </html>
