--- a/templates/static/contribute.html.twig
+++ b/templates/static/contribute.html.twig
@@ -17,5 +17,11 @@
             <p>Your donation supports the server costs of {{ projectname }} and enables my to do more work on this project.</p>
             <p><a href="{{ paypallink }}" class="btn btn-primary btn-lg">Donate now!</a></p>
         </div>
+        <div class="col-12">
+            <h3>Content creation</h3>
+            <p>{{ projectname }} needs a (literal) plethora of content, most of which is not machine-readable yet and thus can't be implemented automatically. Which means that all the content you see here was actually input by hand.</p>
+            <p>If you want to see your favorite class/spell/monster added to {{ projectname }}, the easiest to do that is to head over to <a href="{{ githublink }}">Github</a> and send me a pull request!</p>
+            <p><a href="{{ githublink }}" class="btn btn-primary btn-lg">Check out the repository on Github</a></p>
+        </div>
     </div>
 {% endblock %}
