description and role added

--- a/templates/_includes/working-on.html.twig
+++ b/templates/_includes/working-on.html.twig
@@ -9,8 +9,10 @@
         <li><strong>☑ Cleric</strong></li>
         <li>☐ Druid</li>
         <li>☐ Fighter</li>
+        <li>☐ Monk</li>
         <li>☐ Paladin</li>
         <li>☐ Ranger</li>
+        <li>☐ Rogue</li>
         <li>☐ Sorcerer</li>
         <li>☐ Wizard</li>
     </ul>
