uuh. Kind of forgot rogue and monk

--- a/templates/static/classes.html.twig
+++ b/templates/static/classes.html.twig
@@ -13,8 +13,10 @@
                 <li><a href="{{ path('api_classes_get_item', {id:'cleric', _format:'json'}) }}">Cleric</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'druid', _format:'json'}) }}">Druid</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'fighter', _format:'json'}) }}">Fighter</a></li>
+                <li><a href="{{ path('api_classes_get_item', {id:'monk', _format:'json'}) }}">Monk</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'paladin', _format:'json'}) }}">Paladin</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'ranger', _format:'json'}) }}">Ranger</a></li>
+                <li><a href="{{ path('api_classes_get_item', {id:'rogue', _format:'json'}) }}">Rogue</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'sorcerer', _format:'json'}) }}">Sorcerer</a></li>
                 <li><a href="{{ path('api_classes_get_item', {id:'wizard', _format:'json'}) }}">Wizard</a></li>
             </ul>
