class advancements for bard

--- a/templates/_includes/working-on.html.twig
+++ b/templates/_includes/working-on.html.twig
@@ -5,7 +5,7 @@
 
     <ul>
         <li><strong>☑ Barbarian</strong></li>
-        <li>☐ Bard</li>
+        <li><strong>☑ Bard</strong></li>
         <li><strong>☑ Cleric</strong></li>
         <li>☐ Druid</li>
         <li>☐ Fighter</li>
