Fighter class advancement

--- a/templates/_includes/working-on.html.twig
+++ b/templates/_includes/working-on.html.twig
@@ -8,7 +8,7 @@
         <li><strong>☑ Bard</strong></li>
         <li><strong>☑ Cleric</strong></li>
         <li>☐ Druid</li>
-        <li>☐ Fighter</li>
+        <li><strong>☑ Fighter</strong></li>
         <li>☐ Monk</li>
         <li>☐ Paladin</li>
         <li>☐ Ranger</li>
