Druid class advancements

--- a/templates/_includes/working-on.html.twig
+++ b/templates/_includes/working-on.html.twig
@@ -7,7 +7,7 @@
         <li><strong>☑ Barbarian</strong></li>
         <li><strong>☑ Bard</strong></li>
         <li><strong>☑ Cleric</strong></li>
-        <li>☐ Druid</li>
+        <li><strong>☑ Druid</strong></li>
         <li><strong>☑ Fighter</strong></li>
         <li>☐ Monk</li>
         <li>☐ Paladin</li>
